Fix Windows release artifact version number issue
- Fixed version extraction to use cross-platform sed instead of bash parameter expansion
- Added explicit bash shell specification for consistency across platforms
- Added debug output to show extracted version
- Resolves missing version number in Windows artifact filename
- Windows artifacts will now properly show: GitHub_Developer_Profiler-windows-v1.0.3-amd64.exe

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -62,7 +62,11 @@ jobs:
 
       - name: Extract version
         id: extract_version
-        run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+        shell: bash
+        run: |
+          VERSION=$(echo "$GITHUB_REF" | sed 's|refs/tags/||')
+          echo "VERSION=$VERSION" >> $GITHUB_ENV
+          echo "Extracted version: $VERSION"
 
       - name: Build for ${{ matrix.goos }}-${{ matrix.goarch }}
         shell: bash
